--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1170,18 +1170,18 @@ repositories:
       url: https://github.com/ros2/poco_vendor.git
       version: master
     status: maintained
-  #  python_cmake_module:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl.git
-  #      version: release-beta2
-  #    status: maintained
+  python_cmake_module:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl.git
+      version: master
+    status: maintained
   #  rcl:
   #    release:
   #      tags:
@@ -1444,66 +1444,66 @@ repositories:
       url: https://github.com/nuclearsandwich/ros_workspace.git
       version: master
     status: maintained
-  #  rosidl_cmake:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_default_generators:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl_typesupport-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl_typesupport.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_default_runtime:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl_typesupport-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl_typesupport.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_generator_c:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_generator_cpp:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl.git
-  #      version: release-beta2
-  #    status: maintained
+  rosidl_cmake:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl.git
+      version: master
+    status: maintained
+  rosidl_default_generators:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl_typesupport-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl_typesupport.git
+      version: master
+    status: maintained
+  rosidl_default_runtime:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl_typesupport-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl_typesupport.git
+      version: master
+    status: maintained
+  rosidl_generator_c:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl.git
+      version: master
+    status: maintained
+  rosidl_generator_cpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl.git
+      version: master
+    status: maintained
   #  rosidl_generator_dds_idl:
   #    release:
   #      tags:
@@ -1516,90 +1516,90 @@ repositories:
   #      url: https://github.com/ros2/rosidl_dds.git
   #      version: release-beta2
   #    status: maintained
-  #  rosidl_generator_py:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_parser:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_typesupport_c:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl_typesupport-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl_typesupport.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_typesupport_cpp:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl_typesupport-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl_typesupport.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_typesupport_interface:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_typesupport_introspection_c:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rosidl_typesupport_introspection_cpp:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl.git
-  #      version: release-beta2
-  #    status: maintained
+  rosidl_generator_py:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl.git
+      version: master
+    status: maintained
+  rosidl_parser:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl.git
+      version: master
+    status: maintained
+  rosidl_typesupport_c:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl_typesupport-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl_typesupport.git
+      version: master
+    status: maintained
+  rosidl_typesupport_cpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl_typesupport-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl_typesupport.git
+      version: master
+    status: maintained
+  rosidl_typesupport_interface:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl.git
+      version: master
+    status: maintained
+  rosidl_typesupport_introspection_c:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl.git
+      version: master
+    status: maintained
+  rosidl_typesupport_introspection_cpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl.git
+      version: master
+    status: maintained
   #  rttest:
   #    release:
   #      tags:
