--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1266,17 +1266,17 @@ repositories:
       url: https://github.com/ros2/rcutils.git
       version: master
     status: maintained
-  #  rmw:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rmw-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rmw.git
-  #      version: release-beta2
+  rmw:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rmw-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rmw.git
+      version: release-beta2
   #  rmw_fastrtps_cpp:
   #    release:
   #      tags:
@@ -1289,29 +1289,29 @@ repositories:
   #      url: https://github.com/ros2/rmw_fastrtps.git
   #      version: release-beta2
   #    status: maintained
-  #  rmw_implementation:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rmw_implementation-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rmw_implementation.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rmw_implementation_cmake:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rmw-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rmw.git
-  #      version: release-beta2
+  rmw_implementation:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rmw_implementation-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rmw_implementation.git
+      version: master
+    status: maintained
+  rmw_implementation_cmake:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rmw-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rmw.git
+      version: master
   #  robot_state_publisher:
   #    release:
   #      tags:
