--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1504,18 +1504,18 @@ repositories:
       url: https://github.com/ros2/rosidl.git
       version: master
     status: maintained
-  #  rosidl_generator_dds_idl:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rosidl_dds-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rosidl_dds.git
-  #      version: release-beta2
-  #    status: maintained
+  rosidl_generator_dds_idl:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rosidl_dds-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rosidl_dds.git
+      version: master
+    status: maintained
   rosidl_generator_py:
     release:
       tags:
