--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1098,6 +1098,18 @@ repositories:
   #      url: https://github.com/ros2/common_interfaces.git
   #      version: release-beta2
   #    status: maintained
+  opensplice_cmake_module:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rmw_opensplice-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rmw_opensplice.git
+      version: master
+    status: maintained
   orocos_kdl:
     release:
       tags:
@@ -1432,6 +1444,18 @@ repositories:
   #      url: https://github.com/ros2/ros2cli.git
   #      version: release-beta2
   #    status: maintained
+  rmw_opensplice_cpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rmw_opensplice-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rmw_opensplice.git
+      version: master
+    status: maintained
   ros_workspace:
     release:
       tags:
@@ -1792,6 +1816,30 @@ repositories:
   #      url: https://github.com/ros2/geometry2.git
   #      version: release-beta2
   #    status: maintained
+  rosidl_typesupport_opensplice_c:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rmw_opensplice-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rmw_opensplice.git
+      version: master
+    status: maintained
+  rosidl_typesupport_opensplice_cpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rmw_opensplice-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rmw_opensplice.git
+      version: master
+    status: maintained
   tinyxml_vendor:
     release:
       tags:
