--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -918,18 +918,18 @@ repositories:
       url: https://github.com/eProsima/Fast-RTPS.git
       version: master
     status: maintained
-  #  fastrtps_cmake_module:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rmw_fastrtps-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rmw_fastrtps.git
-  #      version: release-beta2
-  #    status: maintained
+  fastrtps_cmake_module:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rmw_fastrtps-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/rmw_fastrtps.git
+      version: master
+    status: maintained
   #  geometry_msgs:
   #    release:
   #      tags:
@@ -1289,18 +1289,18 @@ repositories:
       type: git
       url: https://github.com/ros2/rmw.git
       version: release-beta2
-  #  rmw_fastrtps_cpp:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rmw_fastrtps-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rmw_fastrtps.git
-  #      version: release-beta2
-  #    status: maintained
+  rmw_fastrtps_cpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rmw_fastrtps-release.git
+      version: 0.0.2-1
+    source:
+      type: git
+      url: https://github.com/ros2/rmw_fastrtps.git
+      version: master
+    status: maintained
   rmw_implementation:
     release:
       tags:
