Fix branch name.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1288,7 +1288,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/rmw.git
-      version: release-beta2
+      version: master
   rmw_fastrtps_cpp:
     release:
       tags:
