--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -6,18 +6,18 @@ release_platforms:
   ubuntu:
   - xenial
 repositories:
-  #  actionlib_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  actionlib_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: master
+    status: maintained
   #  amcl:
   #    release:
   #      tags:
@@ -570,18 +570,18 @@ repositories:
   #      url: https://github.com/ros2/ros_astra_camera.git
   #      version: release-beta2
   #    status: maintained
-  #  builtin_interfaces:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  builtin_interfaces:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: master
+    status: maintained
   #  cartographer:
   #    release:
   #      tags:
@@ -714,18 +714,18 @@ repositories:
   #      url: https://github.com/ros2/depthimage_to_laserscan.git
   #      version: release-beta2
   #    status: maintained
-  #  diagnostic_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  diagnostic_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: master
+    status: maintained
   #  dummy_map_server:
   #    release:
   #      tags:
@@ -930,18 +930,18 @@ repositories:
       url: https://github.com/ros2/rmw_fastrtps.git
       version: master
     status: maintained
-  #  geometry_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  geometry_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: master
+    status: maintained
   gmock_vendor:
     release:
       tags:
@@ -1086,18 +1086,18 @@ repositories:
   #      url: https://github.com/ros2/navigation.git
   #      version: release-beta2
   #    status: maintained
-  #  nav_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  nav_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: master
+    status: maintained
   opensplice_cmake_module:
     release:
       tags:
@@ -1636,30 +1636,30 @@ repositories:
   #      url: https://github.com/ros2/realtime_support.git
   #      version: release-beta2
   #    status: maintained
-  #  sensor_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
-  #  shape_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  sensor_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: release-beta2
+    status: maintained
+  shape_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: release-beta2
+    status: maintained
   #  sros2:
   #    release:
   #      tags:
@@ -1672,42 +1672,42 @@ repositories:
   #      url: https://github.com/ros2/sros2.git
   #      version: release-beta2
   #    status: maintained
-  #  std_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
-  #  std_srvs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
-  #  stereo_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  std_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: master
+    status: maintained
+  std_srvs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: master
+    status: maintained
+  stereo_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: master
+    status: maintained
   #  teleop_twist_joy:
   #    release:
   #      tags:
@@ -1888,18 +1888,18 @@ repositories:
   #      url: https://github.com/ros2/demos.git
   #      version: release-beta2
   #    status: maintained
-  #  trajectory_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  trajectory_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: release-beta2
+    status: maintained
   #  turtlebot2_amcl:
   #    release:
   #      tags:
@@ -2008,17 +2008,17 @@ repositories:
   #      url: https://github.com/ros2/urdfdom_headers.git
   #      version: release-beta2
   #    status: maintained
-  #  visualization_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/common_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/common_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  visualization_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/common_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/common_interfaces.git
+      version: master
+    status: maintained
 type: distribution
 version: 2
