--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -762,18 +762,18 @@ repositories:
   #      url: https://github.com/ros2/demos.git
   #      version: release-beta2
   #    status: maintained
-  #  example_interfaces:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/example_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/example_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  example_interfaces:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/example_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/example_interfaces.git
+      version: master
+    status: maintained
   #  examples_rclcpp_minimal_client:
   #    release:
   #      tags:
