--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1062,18 +1062,18 @@ repositories:
   #      url: https://github.com/ros2/demos.git
   #      version: release-beta2
   #    status: maintained
-  #  lifecycle_msgs:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rcl_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rcl_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  lifecycle_msgs:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rcl_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rcl_interfaces.git
+      version: nuclearsandwich-patch-1
+    status: maintained
   #  map_server:
   #    release:
   #      tags:
@@ -1206,18 +1206,18 @@ repositories:
   #      url: https://github.com/ros2/rcl.git
   #      version: release-beta2
   #    status: maintained
-  #  rcl_interfaces:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rcl_interfaces-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rcl_interfaces.git
-  #      version: release-beta2
-  #    status: maintained
+  rcl_interfaces:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rcl_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rcl_interfaces.git
+      version: nuclearsandwich-patch-1
+    status: maintained
   #  rcl_lifecycle:
   #    release:
   #      tags:
@@ -1732,6 +1732,18 @@ repositories:
   #      url: https://github.com/ros2/teleop_twist_keyboard.git
   #      version: release-beta2
   #    status: maintained
+  test_msgs:
+    release:
+      tags:
+        release: release/r3b3/{package}{version}
+      type: git
+      url: https://github.com/ros2-gbp/rcl_interfaces-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rcl_interfaces
+      version: master
+    status: maintained
   #  tf2:
   #    release:
   #      tags:
