Update missed url.

--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1742,7 +1742,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros2/rcl_interfaces
-      version: master
+      version: nuclearsandwich-patch-1
     status: maintained
   #  tf2:
   #    release:
