--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1735,13 +1735,13 @@ repositories:
   test_msgs:
     release:
       tags:
-        release: release/r3b3/{package}{version}
+        release: release/r3b3/{package}/{version}
       type: git
       url: https://github.com/ros2-gbp/rcl_interfaces-release.git
       version: 0.0.2-0
     source:
       type: git
-      url: https://github.com/ros2/rcl_interfaces
+      url: https://github.com/ros2/rcl_interfaces.git
       version: nuclearsandwich-patch-1
     status: maintained
   #  tf2:
