--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1194,18 +1194,18 @@ repositories:
       url: https://github.com/ros2/rosidl.git
       version: master
     status: maintained
-  #  rcl:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rcl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rcl.git
-  #      version: release-beta2
-  #    status: maintained
+  rcl:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rcl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rcl.git
+      version: master
+    status: maintained
   rcl_interfaces:
     release:
       tags:
@@ -1218,18 +1218,18 @@ repositories:
       url: https://github.com/ros2/rcl_interfaces.git
       version: nuclearsandwich-patch-1
     status: maintained
-  #  rcl_lifecycle:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rcl-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rcl.git
-  #      version: release-beta2
-  #    status: maintained
+  rcl_lifecycle:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rcl-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rcl.git
+      version: master
+    status: maintained
   #  rclcpp:
   #    release:
   #      tags:
