--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1230,30 +1230,30 @@ repositories:
       url: https://github.com/ros2/rcl.git
       version: master
     status: maintained
-  #  rclcpp:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rclcpp-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rclcpp.git
-  #      version: release-beta2
-  #    status: maintained
-  #  rclcpp_lifecycle:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/rclcpp-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/rclcpp.git
-  #      version: release-beta2
-  #    status: maintained
+  rclcpp:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rclcpp-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rclcpp.git
+      version: master
+    status: maintained
+  rclcpp_lifecycle:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/rclcpp-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/rclcpp.git
+      version: master
+    status: maintained
   rclpy:
     release:
       tags:
