--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -1348,102 +1348,102 @@ repositories:
   #      url: https://github.com/ros2/ros1_bridge.git
   #      version: release-beta2
   #    status: maintained
-  #  ros2cli:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros2cli-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros2cli.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ros2msg:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros2cli-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros2cli.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ros2node:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros2cli-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros2cli.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ros2pkg:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros2cli-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros2cli.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ros2run:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros2cli-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros2cli.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ros2service:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros2cli-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros2cli.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ros2srv:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros2cli-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros2cli.git
-  #      version: release-beta2
-  #    status: maintained
-  #  ros2topic:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/ros2cli-release.git
-  #      version: 0.0.2-0
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros2/ros2cli.git
-  #      version: release-beta2
-  #    status: maintained
+  ros2cli:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros2cli-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ros2cli.git
+      version: master
+    status: maintained
+  ros2msg:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros2cli-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ros2cli.git
+      version: master
+    status: maintained
+  ros2node:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros2cli-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ros2cli.git
+      version: master
+    status: maintained
+  ros2pkg:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros2cli-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ros2cli.git
+      version: master
+    status: maintained
+  ros2run:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros2cli-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ros2cli.git
+      version: master
+    status: maintained
+  ros2service:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros2cli-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ros2cli.git
+      version: master
+    status: maintained
+  ros2srv:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros2cli-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ros2cli.git
+      version: master
+    status: maintained
+  ros2topic:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/ros2cli-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/ros2/ros2cli.git
+      version: master
+    status: maintained
   rmw_opensplice_cpp:
     release:
       tags:
