--- a/r2b3/distribution.yaml
+++ b/r2b3/distribution.yaml
@@ -630,18 +630,18 @@ repositories:
   #      url: https://github.com/ros2/ceres-solver.git
   #      version: release-beta2
   #    status: maintained
-  #  class_loader:
-  #    release:
-  #      tags:
-  #        release: release/r2b3/{package}/{version}
-  #      type: git
-  #      url: https://github.com/ros2-gbp/class_loader-release.git
-  #      version: 1.0.0-8
-  #    source:
-  #      type: git
-  #      url: https://github.com/ros/class_loader.git
-  #      version: 1f1793e3dc0b93430ba430d62574078d17c2c0ef
-  #    status: maintained
+  class_loader:
+    release:
+      tags:
+        release: release/r2b3/{package}/{version}
+      type: git
+      url: https://github.com/ros2-gbp/class_loader-release.git
+      version: 1.0.0-8
+    source:
+      type: git
+      url: https://github.com/ros/class_loader.git
+      version: master
+    status: maintained
   #  composition:
   #    release:
   #      tags:
